adding item page and pushing collections to index

--- a/casechain/main/templates/main/index.html
+++ b/casechain/main/templates/main/index.html
@@ -53,6 +53,15 @@
 			{{ case.plaintiff }}
 
 			<table class="table table-sm table-hover table-striped">
+  <ul>
+    {% for case in cases %}
+      <li>
+        {{ case.id }} {{ case.plaintiff }}
+      </li>
+    {% endfor %}
+  </ul>
+
+
 
 				<thead>
 					<tr>
