template and styling updates

--- a/casechain/main/static/main/scss/application.scss
+++ b/casechain/main/static/main/scss/application.scss
@@ -6,7 +6,10 @@
  */
 
 // Core variables and mixins
+@import "custom/variables";
 @import "bootstrap/variables";
+
+
 @import "bootstrap/mixins";
 @import "bootstrap/custom";
 
