der ganze gammel da

--- a/casechain/main/templates/main/index.html
+++ b/casechain/main/templates/main/index.html
@@ -21,7 +21,7 @@
 			<tr>
 				<td>{{ case.date }}</td>
 				<td>{{ case.court }}</td>
-				<td><a href="./{{ case.id }}">{{ case.file }} AZ</a></td>
+				<td><a href="./{{ case.id }}">{{ case.caseFile }}</a></td>
 				<td class="text-center"><i class="fa fa-chain text-success"></i>/<i class="fa fa-chain-broken text-danger"></i></td>
 			</tr>
 			{% endfor %}
