--- a/casechain/main/templates/main/new.html
+++ b/casechain/main/templates/main/new.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="col-sm-12">
 
-	<h1 class="margin-bottom-2">{{ case.date }}, {{ case.court }}, {{ case.caseFile }}</h1>
+	<h1 class="margin-bottom-2">Neues Urteil</h1>
 
 	<section class="margin-bottom-2">
 		<h2>Fallinformationen</h2>
