--- a/casechain/main/static/main/scss/custom/_variables.scss
+++ b/casechain/main/static/main/scss/custom/_variables.scss
@@ -1,6 +1,8 @@
 $font-size-h1: 1.5rem;
-$font-size-h2: 1.4rem;
-$font-size-h3: 1.3rem;
-$font-size-h4: 1.2rem;
-$font-size-h5: 1.1rem;
-$font-size-h6: 1rem;
+$font-size-h2: 1.2rem;
+$font-size-h3: 1.1rem;
+$font-size-h4: 1rem;
+$font-size-h5: .9rem;
+$font-size-h6: .8rem;
+
+$headings-margin-bottom: 1rem;
