--- a/casechain/main/templates/main/base.html
+++ b/casechain/main/templates/main/base.html
@@ -23,7 +23,7 @@
 		<nav>
 			<ul class="nav nav-pills float-right">
 				<li class="nav-item">
-					<a class="nav-link active" href="#"><i class="fa fa-home"></i> Dashboard</a>
+					<a class="nav-link active" href="./add"><i class="fa fa-plus"></i> Neues Urteil</a>
 				</li>
 			</ul>
 		</nav>
