--- a/casechain/main/templates/main/item.html
+++ b/casechain/main/templates/main/item.html
@@ -58,6 +58,6 @@
 </div>
 
 <div class="col-sm-12 margin-top-2 margin-bottom-2">
-	<a href=".." class="btn btn-primary">zurück</a>
+	<a href="/test" class="btn btn-primary">zurück</a>
 </div>
 {% endblock content %}
