mixed template stuff

--- a/casechain/main/templates/main/base.html
+++ b/casechain/main/templates/main/base.html
@@ -25,6 +25,11 @@
 				<li class="nav-item">
 					<a class="nav-link active" href="./add"><i class="fa fa-plus"></i> Neues Urteil</a>
 				</li>
+				<li class="nav-item padding-left">
+					<form class="bd-search hidden-sm-down">
+						<input class="form-control" type="search" value="Suche…" id="example-search-input">
+					</form>
+				</li>
 			</ul>
 		</nav>
 		<img class="logo" src="{% static  "main/img/casechain_logo.png" %}" />
