--- a/casechain/main/templates/main/index.html
+++ b/casechain/main/templates/main/index.html
@@ -6,6 +6,15 @@
 <div class="col-sm-12">
 
 	<h1 class="margin-bottom-3">CaseDashboard</h1>
+
+	<div class="alert alert-success text-center">
+		<i class="fa fa-check"></i> BlockChain intakt
+	</div>
+
+	<div class="alert alert-danger text-center">
+		<i class="fa fa-warning"></i> BlockChain korrumpiert
+	</div>
+
 	<table class="table table-sm table-hover table-striped">
 		<thead>
 			<tr>
