--- a/casechain/main/templates/main/index.html
+++ b/casechain/main/templates/main/index.html
@@ -5,24 +5,29 @@
 {% block content %}
 <div class="col-sm-12">
 
-	<h1 class="margin-bottom-3">CaseDashboard</h1>
+	<h1 class="">
+		CaseDashboard
+		{% if isChainHealthy == True %}
+		<span class="pull-right text-success small"><i class="fa fa-chain"></i> Blockchain intakt</span>
+		{% else %}
+		<span class="pull-right text-danger small"><i class="fa fa-chain-broken"></i> Blockchain korrumpiert</span>
+		{% endif %}
+	</h1>
 
-	<div class="alert alert-success text-center">
-		<i class="fa fa-check"></i> BlockChain intakt
-	</div>
-
+	{% if isChainHealthy == False %}
 	<div class="alert alert-danger text-center">
-		<i class="fa fa-warning"></i> BlockChain korrumpiert
+		<i class="fa fa-warning"></i> Achtung! Die Blockchain wurde korrumpiert!
 	</div>
+	{% endif %}
 
-	<table class="table table-sm table-hover table-striped">
+	<table class="table table-sm table-hover table-striped margin-top-2">
 		<thead>
 			<tr>
 				<th>Datum</th>
 				<th>Gericht</th>
 				<th>Aktenzeichen</th>
-        <th>Hash</th>
-				<th class="text-center">BlockStatus</th>
+				<th>Hash</th>
+				<th class="text-center">Status</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -31,14 +36,16 @@
 			<tr>
 				<td>{{ case.date }}</td>
 				<td>{{ case.court }}</td>
-				<td><a href="./{{ case.id }}">{{ case.caseFile }}</a></td>
+				<td>
+					<a href="./{{ case.id }}">{{ case.caseFile }}</a>
+				</td>
 				<td>{{ case.hashValue }}</td>
 				<td class="text-center">
-        {% if case.status %}
-          <i class="fa fa-chain text-success"></i>
-        {% else %}
-          <i class="fa fa-chain-broken text-danger"></i></td>
-        {% endif %}
+					{% if case.status %}
+					<i class="fa fa-chain text-success"></i>
+					{% else %}
+					<i class="fa fa-chain-broken text-danger"></i></td>
+				{% endif %}
 			</tr>
 			{% endfor %}
 
