--- a/casechain/main/templates/main/item.html
+++ b/casechain/main/templates/main/item.html
@@ -8,7 +8,9 @@
 	{% if isChainHealthy == True %}
 	<p class="text-success"><i class="fa fa-chain"></i> Blockchain intakt</p>
 	{% else %}
-	<p class="text-danger"><i class="fa fa-chain-broken"></i> Blockchain korrumpiert</p>
+	<p class="text-danger"><i class="fa fa-chain-broken"></i> Blockchain
+															  korrumpiert
+	</p>
 	{% endif %}
 
 	<h1 class="margin-bottom-2">
@@ -30,30 +32,45 @@
 		</table>
 	</section>
 
+	<!--
 	<section class="margin-bottom-2">
-		<h2>Zwischenurteil(e)</h2>
+		<h2>Tenor</h2>
 		<ul class="list-group">
-      {% for verdict in intVerdicts %}
-      <li class="list-group-item">{{ verdict.text }}
-      
-      </li>
-      {% endfor %}
+			{% for verdict in intVerdicts %}
+			<li class="list-group-item">{{ verdict.text }}
+
+			</li>
+			{% endfor %}
+		</ul>
+	</section>
+	-->
+
+	<section class="margin-bottom-2">
+		<h2>Tenor</h2>
+		<ul class="list-group">
+			<li class="list-group-item">{{ endVerdict.text }}
+			</li>
 		</ul>
 	</section>
 
 	<section class="margin-bottom-2">
-		<h2>Endurteil</h2>
+		<h2>Tatbestand</h2>
 		<ul class="list-group">
-      <li class="list-group-item">{{ endVerdict.text }}  
-      </li>
+			{% for fact in facts %}
+				<li class="list-group-item">{{ fact.fact }}</li>
+			{% endfor %}
 		</ul>
 	</section>
+
 	<section class="margin-bottom-2">
-		<h2>Fakten</h2>
+		<h2>Gründe</h2>
 		<ul class="list-group">
-      {% for fact in facts %}
-      <li class="list-group-item">{{ fact.fact }}</li>
-      {% endfor %}
+			{% for view in views %}
+				{% if view.viewer == "pl" %}
+
+					<li class="list-group-item">{{ view.view }}</li>
+				{% endif %}
+			{% endfor %}
 		</ul>
 	</section>
 
